--- a/CrossoutLogViewer.GUI/Controls/MapsControl.xaml
+++ b/CrossoutLogViewer.GUI/Controls/MapsControl.xaml
@@ -13,10 +13,11 @@
                   Style="{DynamicResource GroupBox.TitleBar}">
             <ListBox x:Name="ListBoxMaps"
                      Background="Transparent"
+                     ItemsSource="{Binding Maps}"
                      SelectionChanged="ListBoxMaps_SelectionChanged">
                 <ListBox.ItemTemplate>
                     <DataTemplate>
-                        <TextBlock Margin="4"
+                        <TextBlock Margin="4,6,0,6"
                                    VerticalAlignment="Center">
                         <Run Text="{Binding Name, Mode=OneWay}" />
                         <Run Text="•" />
@@ -44,7 +45,7 @@
                             <local:GameListFilter FilterChanged="GameListFilter_FilterChanged"
                                                   HorizontalAlignment="Stretch" />
                             <Button Content="Open Users"
-                                    Style="{DynamicResource Button.Borderless}"
+                                    Style="{DynamicResource Button.Outline}"
                                     Click="OpenUsersClick"
                                     VerticalAlignment="Center"
                                     HorizontalAlignment="Center"
