--- a/CrossoutLogViewer.GUI/Controls/UserGamesControl.xaml
+++ b/CrossoutLogViewer.GUI/Controls/UserGamesControl.xaml
@@ -10,10 +10,10 @@
              xmlns:IconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
              BorderThickness="0"
              d:DesignHeight="450"
-             d:DesignWidth="800">
+             d:DesignWidth="800"
+             x:Name="_UserGameControl">
     <Grid>
-        <local:UserOverview x:Name="UserOverview"
-                            Height="Auto" />
+        <local:UserOverview Height="Auto" />
         <local:ScrollableHeaderedControl Grid.Row="1">
             <local:ScrollableHeaderedControl.HeaderContent>
                 <Grid>
@@ -22,14 +22,13 @@
                               Grid.ColumnSpan="2"
                               IsExpanded="True"
                               Margin="0,4,0,0">
-                            <local:PlayerGamesChart ItemsSource="{Binding ParticipationsFiltered}"
-                                                    Height="200" />
+                        <local:PlayerGamesChart Height="200" />
                     </Expander>
                     <local:GameListFilter FilterChanged="RefreshGamesFilter"
                                           HorizontalAlignment="Stretch"
                                           Grid.Row="1" />
                     <Button Content="Open Users"
-                            Style="{DynamicResource Button.Borderless}"
+                            Style="{DynamicResource Button.Outline}"
                             Click="OpenUsersClick"
                             VerticalAlignment="Center"
                             HorizontalAlignment="Center"
@@ -46,7 +45,7 @@
                 </Grid>
             </local:ScrollableHeaderedControl.HeaderContent>
             <local:ScrollableHeaderedControl.Content>
-                <local:PlayerGamesDataGrid Grid.Row="2" />
+                <local:PlayerGamesDataGrid />
             </local:ScrollableHeaderedControl.Content>
         </local:ScrollableHeaderedControl>
         
